BlueCard.js: Added iconOptions array. Added handler for updates to cards. Updated constructor and renderer to track edits. Issue;js: Added iconsOptions array. Fixed scoreAlign functional logic. Law.js: Default constructor includes all laws zeroed out. Game.js: Added logic to replace blue cards.

--- a/LegislationGame/ClientApp/src/components/Game.css
+++ b/LegislationGame/ClientApp/src/components/Game.css
@@ -19,10 +19,6 @@ body {
   margin-bottom:50px;
 }
 
-.btn-group{
-  margin-top: 70px;
-}
-
 .blue{
   background-color: #008cba;
 }
